[gd_scene load_steps=5 format=3 uid="uid://cu5cp3afg45js"]

[ext_resource type="Script" uid="uid://c13f1cldt5cuu" path="res://entities/players/user/user_player.gd" id="1_symyc"]
[ext_resource type="PackedScene" uid="uid://dkeyxnjsgknmh" path="res://entities/tanks/assault_tank.tscn" id="3_mtw8o"]
[ext_resource type="PackedScene" uid="uid://civv5axwjpdef" path="res://entities/camera/topdown_camera.tscn" id="3_og0ch"]

[sub_resource type="BoxShape3D" id="BoxShape3D_abrql"]
size = Vector3(9, 6, 12)

[node name="UserPlayer" type="CharacterBody3D"]
script = ExtResource("1_symyc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.3, 0, -7.152557e-08, 0, 0.3, 0, 7.152557e-08, 0, 0.3, 0, 1, 0)
shape = SubResource("BoxShape3D_abrql")

[node name="AssaultTank" parent="." instance=ExtResource("3_mtw8o")]
transform = Transform3D(-0.3, 0, -4.5298744e-08, 0, 0.3, 0, 4.5298744e-08, 0, -0.3, 0, 0, 0)

[node name="FirerateTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="TopdownCamera" parent="." instance=ExtResource("3_og0ch")]

[connection signal="timeout" from="FirerateTimer" to="." method="_on_firerate_timer_timeout"]
